--- a/site/.htaccess
+++ b/site/.htaccess
@@ -3,7 +3,7 @@
 ##
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteBase /anthanh/site/
+    RewriteBase /site/
 
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
